--- a/020_eda_feature_engineering.ipynb
+++ b/020_eda_feature_engineering.ipynb
@@ -10857,9 +10857,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:streamlit]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-streamlit-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -10871,7 +10871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
