added table of contents to jupyter notebook

--- a/010_data_acquisition.ipynb
+++ b/010_data_acquisition.ipynb
@@ -5,7 +5,9 @@
    "id": "3f2e5b07-f04f-488c-88de-4603f4e6e2d5",
    "metadata": {},
    "source": [
-    "# 010 Gathering Data - Web Scraping"
+    "---\n",
+    "title: 010 Gathering Data - Web Scraping\n",
+    "---"
    ]
   },
   {
@@ -13,10 +15,20 @@
    "id": "04f99cc2-a6c2-47ce-987c-37a22e225ab5",
    "metadata": {},
    "source": [
-    "**Author**: Andrew Yew Chean Yang <br>\n",
+    "**Author**: Andrew Yew<br>\n",
     "**Date**: 2023-04-11\n",
     "\n",
-    "Table of contents are available for JupyterLab"
+    "Table of contents:\n",
+    "- [Project Introduction](#Project-Introduction)\n",
+    "- [Notebook Introduction](#Notebook-Introduction)\n",
+    "  - [Disclaimer](#Disclaimer)\n",
+    "- [Import Required Packages](#Import-Required-Packages)\n",
+    "- [Define Functions and Global Settings](#Define-Functions-and-Global-Settings)\n",
+    "- [Initialize the Web Scrape](#Initialize-the-Web-Scrape)\n",
+    "- [Gather List of Recipe URLs](#Gather-List-of-Recipe-URLs)\n",
+    "- [Gather List of Recipe URLs (2nd iteration)](#Gather-List-of-Recipe-URLs-(2nd-iteration))\n",
+    "- [Scrape Data from Recipe URLs](#Scrape-Data-from-Recipe-URLs)\n",
+    "- [Conclusion for Notebook 010](#Conclusion-for-Notebook-010)"
    ]
   },
   {
