--- a/020_eda_feature_engineering.ipynb
+++ b/020_eda_feature_engineering.ipynb
@@ -5,7 +5,9 @@
    "id": "de556fac-54e9-4a9f-8ff3-cb83b0525262",
    "metadata": {},
    "source": [
-    "# Recipe Classifier Notebook 020: Exploratory Data Analysis, Processing, Feature Engineering"
+    "---\n",
+    "title: 020 Exploratory Data Analysis, Processing, Feature Engineering\n",
+    "---"
    ]
   },
   {
@@ -13,10 +15,52 @@
    "id": "7f417f17-961f-4998-a0e4-4ec8116b2bf5",
    "metadata": {},
    "source": [
-    "**Author**: Andrew Yew Chean Yang <br>\n",
+    "**Author**: Andrew Yew<br>\n",
     "**Date**: 2023-04-11\n",
     "\n",
-    "Table of contents are available for JupyterLab"
+    "Table of contents:\n",
+    "- [Notebook Introduction](#Notebook-Introduction)\n",
+    "- [Import Required Packages](#Import-Required-Packages)\n",
+    "- [Define Functions and Global Settings](#Define-Functions-and-Global-Settings)\n",
+    "- [Load Data](#Load-Data)\n",
+    "- [Extracting JSON Dictionary in `review_dict`](#Extracting-JSON-Dictionary-in-`review_dict`)\n",
+    "  - [Extracting `name`](#Extracting-`name`)\n",
+    "  - [Extracting Other Single Value Key-Value Pairs](#Extracting-Other-Single-Value-Key-Value-Pairs)\n",
+    "  - [Extract Review Text](#Extract-Review-Text)\n",
+    "  - [Extract Tags](#Extract-Tags)\n",
+    "  - [Extract Instructions](#Extract-Instructions)\n",
+    "  - [Extract Yield](#Extract-Yield)\n",
+    "  - [Extract Ingredients](#Extract-Ingredients)\n",
+    "  - [Extract Nutrition](#Extract-Nutrition)\n",
+    "  - [Extract Video](#Extract-Video)\n",
+    "  - [Extract Image](#Extract-Image)\n",
+    "  - [Extract Time Related Keys](#Extract-Time-Related-Keys)\n",
+    "  - [Extract Author](#Extract-Author)\n",
+    "  - [Extract Aggregate Rating](#Extract-Aggregate-Rating)\n",
+    "  - [Saving the Extracted JSON data](#Saving-the-Extracted-JSON-data)\n",
+    "- [Data Consolidation between Directly Scraped Data and Extracted JSON Data](#Data-Consolidation-between-Directly-Scraped-Data-and-Extracted-JSON-Data)\n",
+    "  - [Nutritional Information](#Nutritional-Information)\n",
+    "  - [Time Columns](#Time-Columns)\n",
+    "  - [Other Columns](#Other-Columns)\n",
+    "  - [Consolidated Data](#Consolidated-Data)\n",
+    "- [Exploratory Data Analysis and Feature Engineering](#Exploratory-Data-Analysis-and-Feature-Engineering)\n",
+    "  - [Target Feature: `average_rating`](#Target-Feature:-`average_rating`)\n",
+    "  - [Null Values](#Null-Values)\n",
+    "    - [Null Values for `number_of_reviews`](#Null-Values-for-`number_of_reviews`)\n",
+    "    - [Null Values for `number_of_servings`](#Null-Values-for-`number_of_servings`)\n",
+    "    - [Null Values for `cook_time` and `prep_time`](#Null-Values-for-`cook_time`-and-`prep_time`)\n",
+    "    - [Null Values for `tags`](#Null-Values-for-`tags`)\n",
+    "    - [Null Values for `review`](#Null-Values-for-`review`)\n",
+    "    - [Null Values for `author`](#Null-Values-for-`author`)\n",
+    "    - [Summary of Remaining Null Values](#Summary-of-Remaining-Null-Values)\n",
+    "    - [Removing Misrepresented Punctuation](#Removing-Misrepresented-Punctuation)\n",
+    "  - [Distribution Analysis](#Distribution-Analysis)\n",
+    "  - [Multicollinearity Analysis](#Multicollinearity-Analysis)\n",
+    "    - [Dropping collinear columns that cannot be transformed](#Dropping-collinear-columns-that-cannot-be-transformed)\n",
+    "  - [Feature Engineering](#Feature-Engineering)\n",
+    "  - [Reducing Bias towards Author](#Reducing-Bias-towards-Author)\n",
+    "- [Conclusion](#Conclusion)\n",
+    "- [Export Processed Data](#Export-Processed-Data)"
    ]
   },
   {
