--- a/030_modelling.ipynb
+++ b/030_modelling.ipynb
@@ -5,7 +5,9 @@
    "id": "ed1a4097-80e2-4211-997c-fa81ae3b72fb",
    "metadata": {},
    "source": [
-    "# Recipe Classifier Notebook 030: Modelling"
+    "---\n",
+    "title: 030 Modelling\n",
+    "---"
    ]
   },
   {
@@ -13,10 +15,46 @@
    "id": "77c326e3-f64b-4ab0-8386-edcc21dcd06b",
    "metadata": {},
    "source": [
-    "**Author**: Andrew Yew Chean Yang <br>\n",
+    "**Author**: Andrew Yew<br>\n",
     "**Date**: 2023-04-11<br>\n",
     "\n",
-    "Table of contents are available for JupyterLab"
+    "Table of contents:\n",
+    "- [Notebook introduction](#Notebook-introduction)\n",
+    "  - [Warning](#Warning)\n",
+    "- [Import Required Packages](#Import-Required-Packages)\n",
+    "- [Define Global Variables and Functions](#Define-Global-Variables-and-Functions)\n",
+    "- [Load Processed Data](#Load-Processed-Data)\n",
+    "- [Split Data into Remainder and Test Sets](#Split-Data-into-Remainder-and-Test-Sets)\n",
+    "- [Final Preprocessing](#Final-Preprocessing)\n",
+    "  - [One Hot Encoding (OHE)](#One-Hot-Encoding-(OHE))\n",
+    "  - [Vectorization: CountVectorizer and Term Frequency-Inverse Document Frequency (TF-IDF)](#Vectorization:-CountVectorizer-and-Term-Frequency-Inverse-Document-Frequency-(TF-IDF))\n",
+    "  - [TF-IDF settings](#TF-IDF-settings)\n",
+    "  - [KNN Imputer](#KNN-Imputer)\n",
+    "  - [Application of Final Preprocessing](#Application-of-Final-Preprocessing)\n",
+    "- [Modelling](#Modelling)\n",
+    "  - [Split Remainder Data into Train and Validation](#Split-Remainder-Data-into-Train-and-Validation)\n",
+    "  - [Base Model with Default Parameter Testing](#Base-Model-with-Default-Parameter-Testing)\n",
+    "    - [Logistic Regression](#Logistic-Regression)\n",
+    "    - [K-Nearest Neighbour (KNN)](#K-Nearest-Neighbour-(KNN))\n",
+    "    - [Random Forest Classifier](#Random-Forest-Classifier)\n",
+    "    - [Gradient Boosting](#Gradient-Boosting)\n",
+    "    - [XGBoost](#XGBoost)\n",
+    "      - [CASE1: no log and no standard scaler](#CASE1:-no-log-and-no-standard-scaler)\n",
+    "      - [CASE2: log but no standard scaler](#CASE2:-log-but-no-standard-scaler)\n",
+    "      - [CASE3: log with standard scaler](#CASE3:-log-with-standard-scaler)\n",
+    "      - [CASE4: no log but standard scaler](#CASE4:-no-log-but-standard-scaler)\n",
+    "  - [Hyperparameter Optimization](#Hyperparameter-Optimization)\n",
+    "    - [XGBoost Tuning](#XGBoost-Tuning)\n",
+    "      - [XGBoost Interpretation](#XGBoost-Interpretation)\n",
+    "    - [Logistic Regression Tuning](#Logistic-Regression-Tuning)\n",
+    "      - [Round 1: Larger Steps between Parameters](#Round-1:-Larger-Steps-between-Parameters)\n",
+    "      - [Round 2: Fixed RobustScaler, Finetuning Normalization Factors](#Round-2:-Fixed-RobustScaler,-Finetuning-Normalization-Factors)\n",
+    "        - [Optimized Logistic Regression Model Coefficient Analysis](#Optimized-Logistic-Regression-Model-Coefficient-Analysis)\n",
+    "- [Final Model](#Final-Model)\n",
+    "  - [Analysis of Final Model](#Analysis-of-Final-Model)\n",
+    "    - [Coefficient Analysis](#Coefficient-Analysis)\n",
+    "- [Conclusion](#Conclusion)\n",
+    "- [Exporting the Final Model](#Exporting-the-Final-Model)"
    ]
   },
   {
