Finished creating file in AWS S3, started final write up for post

--- a/dev/2023-09-15-text-analysis-with-count-vectorizer.ipynb
+++ b/dev/2023-09-15-text-analysis-with-count-vectorizer.ipynb
@@ -16,15 +16,9 @@
    "id": "5766df9a-d0c8-4b71-98c8-8a2d4f4c8cb7",
    "metadata": {},
    "source": [
-    "As an Excel user myself, textual or non-numeric data always felt beyond my reach in the tiny rectangular cells within a spreadsheet. Today, we explore how tokenization of text can be executed in Python to generate numerical insights from the text elements within 40,000 food recipes scraped from [Allrecipes](www.allrecipes.com). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4689bff-a0c6-4606-bc35-bf7691c2313c",
-   "metadata": {},
-   "source": [
-    "# Goal"
+    "As an Excel user myself, textual or non-numeric data always felt beyond reach within the tiny rectangular cells of a spreadsheet. Today, we explore how Natural Language Processing (NLP) was used to quantify the text recipe labels(tags) of 40,000 food recipes scraped from [Allrecipes](www.allrecipes.com). Although a simple and crude application of machine learning data preprocessing, this exercise revealed that the most popular recipe label was \"dessert\" along with other data relationships not possible with just numerical data.\n",
+    "\n",
+    "For further context, this article is an extension on my project on building a classifier for food recipes, with the repository available [here](https://github.com/andrewyewcy/recipe_classifier)."
    ]
   },
   {
@@ -85,12 +79,12 @@
    "id": "91a9d11d-f5b7-4f5c-9929-b2900392229e",
    "metadata": {},
    "source": [
-    "The [`natural language toolkit(NLTK)`](https://www.nltk.org/) and the [`CountVectorizer`](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html) within `scikit-learn` were used to process and transform the recipe text into tokens which can be quantified numerically for analysis."
+    "The [`natural language toolkit(NLTK)`](https://www.nltk.org/) and the [`CountVectorizer`](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html) within `scikit-learn` were used to process and transform the recipe label text into tokens which can be quantified numerically for analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 124,
    "id": "5091083e-b929-46b1-8ce6-fdbea47ef864",
    "metadata": {},
    "outputs": [
@@ -111,10 +105,17 @@
     "import time         # Measuring time\n",
     "import ast          # Reading lists within pandas DataFrame\n",
     "\n",
+    "# Packages for loading data from AWS S3 bucket\n",
+    "import boto3\n",
+    "import pickle\n",
+    "from io import BytesIO # Read file without writing to disk\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
     "# Packages for data visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from notebook_functions.plot import plot_histogram # Custom function to plot distribution\n",
+    "from notebook_functions.print import print_list    # Custom function for list printing\n",
     "\n",
     "# Packages for pre-processing text\n",
     "import nltk                       # Natural Language Tool Kit\n",
@@ -142,7 +143,7 @@
    "source": [
     "The data was stored in an AWS Simple, Storage, Service (S3) bucket, which is a cloud storage service that integrates well with other AWS applications like EC2 and EMR. \n",
     "\n",
-    "The data contains the various numerical and textual elements of 40,000 recipes web-scraped of Allrecipes between the months of February and March 2023."
+    "The data contains the various numerical and textual elements of 40,000 recipes web-scraped of Allrecipes between the months of February and March 2023. For access to the data, please contact the author of the article."
    ]
   },
   {
@@ -150,7 +151,37 @@
    "id": "5e3c75a5-9542-4f98-b1a8-7c8dd2877a2c",
    "metadata": {},
    "source": [
-    "### Insert image of data here"
+    "## Data Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "906f90df-773e-4c1c-9c31-13843cad0690",
+   "metadata": {},
+   "source": [
+    "![014_001.png](../assets/images/014_001.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f562fff-d226-45a3-9d68-8999e1d40f27",
+   "metadata": {},
+   "source": [
+    "The above image illustrates where the recipe labels can be found in any recipe found on allrecipes.com. The below table explains the 5 columns which will be used for analysis in this article."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "309279a6-7b83-4d7c-a7c8-17fdb8af5a23",
+   "metadata": {},
+   "source": [
+    "| Column | Type | Description |\n",
+    "|---|---|---|\n",
+    "| `recipe_url` | hyperlink | The uniform resource locator(URL) that leads to the recipe hosted on Allrecipes.com |\n",
+    "| `title` | text | The title of each recipe |\n",
+    "| `label` | text | The labels (tags) for each recipe. Used by Allrecipes.com as a method of organizing recipes |\n",
+    "| `rating_average` | float | The rounded average as found on each recipe on Allrecipes.com |\n",
+    "| `rating_count` | integer | The number of ratings for each recipe |"
    ]
   },
   {
@@ -311,20 +342,6 @@
    "metadata": {},
    "source": [
     "Data Dictionary:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "309279a6-7b83-4d7c-a7c8-17fdb8af5a23",
-   "metadata": {},
-   "source": [
-    "| Column | Type | Description |\n",
-    "|---|---|---|\n",
-    "| `recipe_url` | hyperlink | The uniform resource locator(URL) that leads to the recipe hosted on Allrecipes.com |\n",
-    "| `title` | text | The title of each recipe |\n",
-    "| `label` | text | The labels (tags) for each recipe. Used by Allrecipes.com as a method of organizing recipes |\n",
-    "| `rating_average` | float | The rounded average as found on each recipe on Allrecipes.com |\n",
-    "| `rating_count` | integer | The number of ratings for each recipe |"
    ]
   },
   {
