Completed draft of article

--- a/dev/TEST_20230913_awsclient.ipynb
+++ b/dev/TEST_20230913_awsclient.ipynb
@@ -721,6 +721,7 @@
     "import boto3\n",
     "from io import BytesIO\n",
     "\n",
+    "# Stream and read the data from AWS S3 bucket using BytesIO\n",
     "with BytesIO() as data:\n",
     "    s3_resource.Bucket(bucket_name).download_fileobj(\"recipe_url_df.pkl\", data)\n",
     "    data.seek(0)    # move back to the beginning after writing\n",
