Reorganized folders for standardization across other repos

--- a/21_notebooks/011_recipe_labels_upload_data_to_aws_s3.ipynb
+++ b/21_notebooks/011_recipe_labels_upload_data_to_aws_s3.ipynb
@@ -5,7 +5,7 @@
    "id": "db363c30-3273-49da-b355-7bfd43b96d8f",
    "metadata": {},
    "source": [
-    "This notebook documents the process of loading, subsetting, then uploading data to an AWS S3 bucket."
+    "This notebook documents the process of loading, subsetting, then uploading recipe labels data to an AWS S3 bucket."
    ]
   },
   {
@@ -49,7 +49,7 @@
    "source": [
     "# Import raw data file\n",
     "df = joblib.load(\n",
-    "    \"../data/raw_data_df.pkl\"\n",
+    "    \"../11_raw_data/raw_data_df.pkl\"\n",
     ")"
    ]
   },
@@ -195,7 +195,7 @@
    ],
    "source": [
     "# Save filtered DataFrame\n",
-    "filename = \"../data/recipe_label_df.pkl\"\n",
+    "filename = \"../11_raw_data/recipe_label_df.pkl\"\n",
     "joblib.dump(df, filename = filename)"
    ]
   },
