Added table of contents

--- a/21_notebooks/021_recipe_labels_analysis_count_vectorizer.ipynb
+++ b/21_notebooks/021_recipe_labels_analysis_count_vectorizer.ipynb
@@ -2,6 +2,54 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3790e929-0ded-433a-a2cb-8c8c2ed27c1c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: 021 Recipe Labels Analysis with CountVectorizer\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f2ee5a1-7db3-4f58-97a6-2cf7c7975cdb",
+   "metadata": {},
+   "source": [
+    "**Author**: Andrew Yew<br>\n",
+    "**Date**: 2023-09-22<br>\n",
+    "\n",
+    "Table of contents:\n",
+    "- [Motivation and Introduction](#Motivation-and-Introduction)\n",
+    "- [Overview of Setup](#Overview-of-Setup)\n",
+    "  - [Docker Environments](#Docker-Environments)\n",
+    "  - [Import Packages and Define Functions](#Import-Packages-and-Define-Functions)\n",
+    "- [Import Data From AWS S3](#Import-Data-From-AWS-S3)\n",
+    "  - [Data Dictionary](#Data-Dictionary)\n",
+    "  - [Instantiate AWS S3 Client and Resource Interfaces](#Instantiate-AWS-S3-Client-and-Resource-Interfaces)\n",
+    "  - [Check File Size and Import Data](#Check-File-Size-and-Import-Data)\n",
+    "- [Data Cleaning and EDA](#Data-Cleaning-and-EDA)\n",
+    "  - [Null `titles`](#Null-`titles`)\n",
+    "  - [Null `rating_average` and `rating_count`](#Null-`rating_average`-and-`rating_count`)\n",
+    "  - [Distribution of `rating_average` and `rating_count`](#Distribution-of-`rating_average`-and-`rating_count`)\n",
+    "  - [Recipes with Less than 2 ratings](#Recipes-with-Less-than-2-ratings)\n",
+    "  - [Data Cleaning Summary](#Data-Cleaning-Summary)\n",
+    "- [Text Preprocessing](#Text-Preprocessing)\n",
+    "  - [Remove Punctuation](#Remove-Punctuation)\n",
+    "  - [Remove Numbers](#Remove-Numbers)\n",
+    "  - [Remove Stop Words + Stemming](#Remove-Stop-Words-+-Stemming)\n",
+    "  - [Compilation into a Tokenizer function](#Compilation-into-a-Tokenizer-function)\n",
+    "- [CountVectorizor](#CountVectorizor)\n",
+    "  - [Testing with Smaller Sample](#Testing-with-Smaller-Sample)\n",
+    "  - [All Recipes Vectorized](#All-Recipes-Vectorized)\n",
+    "- [Visual Analysis of Recipe Labels](#Visual-Analysis-of-Recipe-Labels)\n",
+    "  - [Top 20 Recipe Labels](#Top-20-Recipe-Labels)\n",
+    "  - [Bivariate Analysis with Average Rating](#Bivariate-Analysis-with-Average-Rating)\n",
+    "- [Conclusion](#Conclusion)\n",
+    "- [References and Acknowledgement](#References-and-Acknowledgement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d180f4b4-9d9c-459a-a46c-86dff01253d6",
    "metadata": {},
    "source": [
@@ -3338,7 +3386,7 @@
    "source": [
     "To summarize, the text recipe labels of 40,000 recipes from allrecipes.com were were preprocessed using NLP methods then analyzed to reveal that the most popular recipe label was `dessert`, and that among the top 20 labels, labels pertaining to liquids had higher average ratings compared to labels pertaining to solid foods such as meat. Deeper statistical analysis and further improvements in the formation of meaningful tokens were noted for future iterations. Finally, the vectorization of textual data also allows for applications in recipe similarity search and recommender systems in future endeavors. \n",
     "\n",
-    "The Github notebook for this article can be found [here]()."
+    "The Github notebook for this article can be found [here](https://github.com/andrewyewcy/recipe_classifier/blob/main/21_notebooks/021_recipe_labels_analysis_count_vectorizer.ipynb)."
    ]
   },
   {
