added product url

--- a/30_automation/Scrapper Function to be converted to PY.ipynb
+++ b/30_automation/Scrapper Function to be converted to PY.ipynb
@@ -98,13 +98,21 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dea23759",
+   "id": "cee9751a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Extract HTML of page\n",
-    "html = driver.page_source\n",
-    "\n",
+    "html = driver.page_source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dea23759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# End session\n",
     "driver.quit()"
    ]
@@ -112,29 +120,39 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "81412733",
+   "id": "bb8ad84f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parse the response text using Beautiful Soup\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "81412733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "price_dict = {\n",
     "    \"item\"      : [],\n",
     "    \"weight\"    : [],\n",
     "    \"unit_cost\" : [],\n",
-    "    \"cost\"      : []\n",
+    "    \"cost\"      : [],\n",
+    "    \"url\"       : []\n",
     "}\n",
     "\n",
     "price_dict[\"item\"]      = price_dict[\"item\"]      + [tag.text for tag in soup.find_all(\"a\",{\"data-test\":\"fop-product-link\"})]\n",
     "price_dict[\"weight\"]    = price_dict[\"weight\"]    + [tag.text for tag in soup.find_all(\"span\",{\"class\":\"text__Text-sc-6l1yjp-0 base__SizeText-sc-1mnb0pd-38 fop__SizeText-sc-sgv9y1-4 bhymDA iImbUZ jrvLpU\"})]\n",
     "price_dict[\"unit_cost\"] = price_dict[\"unit_cost\"] + [tag.text for tag in soup.find_all(\"span\",{\"class\":\"text__Text-sc-6l1yjp-0 standard-promotion__PromotionIntentText-sc-1vpsrpe-2 fop__PricePerText-sc-sgv9y1-5 dLNLFE eMCyTR eNYENy\"})]\n",
-    "price_dict[\"cost\"]      = price_dict[\"cost\"]      + [tag.text for tag in soup.find_all(\"strong\",{\"class\":\"base__Price-sc-1mnb0pd-29 sc-ksdxAp ftyPQ kWOBdd\"})]"
+    "price_dict[\"cost\"]      = price_dict[\"cost\"]      + [tag.text for tag in soup.find_all(\"strong\",{\"class\":\"base__Price-sc-1mnb0pd-29 sc-ksdxAp ftyPQ kWOBdd\"})]\n",
+    "price_dict[\"url\"]       = price_dict[\"url\"]      + [tag.get(\"href\") for tag in soup.find_all(\"a\",{\"data-test\":\"fop-product-link\"})]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "85b0e3a6",
    "metadata": {},
    "outputs": [
@@ -163,6 +181,7 @@
        "      <th>weight</th>\n",
        "      <th>unit_cost</th>\n",
        "      <th>cost</th>\n",
+       "      <th>url</th>\n",
        "      <th>time_of_scrape</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -173,7 +192,8 @@
        "      <td>1.75kgtypically</td>\n",
        "      <td>($11.00 per kilogram)</td>\n",
        "      <td>$19.25typically</td>\n",
-       "      <td>2023-11-08 16:25:05.148905</td>\n",
+       "      <td>/products/218890KG/details</td>\n",
+       "      <td>2023-11-09 17:18:42.240746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -181,7 +201,8 @@
        "      <td>1kg</td>\n",
        "      <td>($15.99 per kilogram)</td>\n",
        "      <td>$15.99</td>\n",
-       "      <td>2023-11-08 16:25:05.148905</td>\n",
+       "      <td>/products/18859EA/details</td>\n",
+       "      <td>2023-11-09 17:18:42.240746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -189,7 +210,8 @@
        "      <td>1.5kgtypically</td>\n",
        "      <td>($13.21 per kilogram)</td>\n",
        "      <td>$19.82typically</td>\n",
-       "      <td>2023-11-08 16:25:05.148905</td>\n",
+       "      <td>/products/587643KG/details</td>\n",
+       "      <td>2023-11-09 17:18:42.240746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -197,7 +219,8 @@
        "      <td>1.7kg</td>\n",
        "      <td>($0.94 per 100g)</td>\n",
        "      <td>$16.00</td>\n",
-       "      <td>2023-11-08 16:25:05.148905</td>\n",
+       "      <td>/products/4089EA/details</td>\n",
+       "      <td>2023-11-09 17:18:42.240746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -205,7 +228,8 @@
        "      <td>1.6kgtypically</td>\n",
        "      <td>($15.99 per kilogram)</td>\n",
        "      <td>$25.58typically</td>\n",
-       "      <td>2023-11-08 16:25:05.148905</td>\n",
+       "      <td>/products/20400KG/details</td>\n",
+       "      <td>2023-11-09 17:18:42.240746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -213,7 +237,8 @@
        "      <td>1kg</td>\n",
        "      <td>($17.99 per kilogram)</td>\n",
        "      <td>$17.99</td>\n",
-       "      <td>2023-11-08 16:25:05.148905</td>\n",
+       "      <td>/products/18860EA/details</td>\n",
+       "      <td>2023-11-09 17:18:42.240746</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -228,16 +253,24 @@
        "4      Yorkshire Valley Farms Organic Whole Chicken    1.6kgtypically   \n",
        "5  Longo's Rotisserie Chicken Raised Without Anti...              1kg   \n",
        "\n",
-       "               unit_cost             cost             time_of_scrape  \n",
-       "0  ($11.00 per kilogram)  $19.25typically 2023-11-08 16:25:05.148905  \n",
-       "1  ($15.99 per kilogram)           $15.99 2023-11-08 16:25:05.148905  \n",
-       "2  ($13.21 per kilogram)  $19.82typically 2023-11-08 16:25:05.148905  \n",
-       "3       ($0.94 per 100g)           $16.00 2023-11-08 16:25:05.148905  \n",
-       "4  ($15.99 per kilogram)  $25.58typically 2023-11-08 16:25:05.148905  \n",
-       "5  ($17.99 per kilogram)           $17.99 2023-11-08 16:25:05.148905  "
+       "               unit_cost             cost                         url  \\\n",
+       "0  ($11.00 per kilogram)  $19.25typically  /products/218890KG/details   \n",
+       "1  ($15.99 per kilogram)           $15.99   /products/18859EA/details   \n",
+       "2  ($13.21 per kilogram)  $19.82typically  /products/587643KG/details   \n",
+       "3       ($0.94 per 100g)           $16.00    /products/4089EA/details   \n",
+       "4  ($15.99 per kilogram)  $25.58typically   /products/20400KG/details   \n",
+       "5  ($17.99 per kilogram)           $17.99   /products/18860EA/details   \n",
+       "\n",
+       "              time_of_scrape  \n",
+       "0 2023-11-09 17:18:42.240746  \n",
+       "1 2023-11-09 17:18:42.240746  \n",
+       "2 2023-11-09 17:18:42.240746  \n",
+       "3 2023-11-09 17:18:42.240746  \n",
+       "4 2023-11-09 17:18:42.240746  \n",
+       "5 2023-11-09 17:18:42.240746  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,21 +284,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "5f04a086",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(f\"../11_raw_data/{time.strftime('%Y%m%d-%H%M')}_voila_price.csv\", index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2e4b6de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
