tidied up folder to publish on aws ec2 instance instead of streamlit

--- a/30_automation/Scrapper Function to be converted to PY.ipynb
+++ b/30_automation/Scrapper Function to be converted to PY.ipynb
@@ -48,6 +48,7 @@
     "options = webdriver.ChromeOptions()\n",
     "options.add_argument(\"--window-size=1600,960\")\n",
     "options.add_argument(\"user-agent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36\")\n",
+    "\n",
     "driver = webdriver.Chrome(options = options)"
    ]
   },
@@ -64,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f9ab9b3c",
+   "id": "461526e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,20 +74,44 @@
     "browse_menu = WebDriverWait(driver,10).until(\n",
     "    EC.presence_of_element_located((By.ID, \"nav-menu-button\"))\n",
     ")\n",
-    "browse_menu.click() # Click on browse menu button\n",
-    "\n",
+    "browse_menu.click() # Click on browse menu button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6ed94167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Level 2: Access meat and seafood\n",
     "meat_and_seafood = WebDriverWait(driver,10).until(\n",
     "    EC.presence_of_element_located((By.LINK_TEXT, \"Meat & Seafood\"))\n",
     ")\n",
-    "meat_and_seafood.click()\n",
-    "\n",
+    "meat_and_seafood.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "21bf1c38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Level 3: Access chicken\n",
     "chicken = WebDriverWait(driver,10).until(\n",
     "    EC.presence_of_element_located((By.LINK_TEXT, \"Chicken\"))\n",
     ")\n",
-    "chicken.click()\n",
-    "\n",
+    "chicken.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f9ab9b3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Level 4: Access whole chicken\n",
     "whole_chicken = WebDriverWait(driver,10).until(\n",
     "    EC.presence_of_element_located((By.LINK_TEXT, \"Whole Chicken\"))\n",
@@ -108,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "dea23759",
    "metadata": {},
    "outputs": [],
@@ -309,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
